Fix layout issues

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,6 +7,7 @@ html {
     background-color: #000;
     text-align: center;
     opacity: .9;
+
 }
 
 .flex-container {
@@ -17,6 +18,11 @@ html {
 
 a {
     color: seashell
+}
+
+.content {
+    width: 1200px;
+    margin: auto;
 }
 
 /* Header Styling */
@@ -57,7 +63,6 @@ nav span {
     margin: 70px auto 0px;
     background-image: url(../images/img-mission-background.jpg);
     height: 700px;
-    width: 1200px;
 }
 
 .mission-statement {
@@ -86,7 +91,6 @@ nav span {
     padding-top: 70px;
     background-image: url(../images/img-locations-background.jpg);
     height: 500px;
-    width: 1200px;
 }
 
 #locations h3 {
